style: :lipstick: Fixed some home hero layout issues
Fixed some home hero layout issues and removed the shadow under the logo

--- a/src/assets/styles/_home.scss
+++ b/src/assets/styles/_home.scss
@@ -13,6 +13,8 @@ $max-content-width: 1920px;
   align-items: center;
   background-image: radial-gradient(#525252, #131313);
   height: 100vh;
+  overflow: hidden;
+  position: relative;
 }
 
 .nav-toggle,
@@ -164,7 +166,7 @@ $max-content-width: 1920px;
   font-size: 1em;
   position: relative;
   display: grid;
-  grid-template-columns: 1fr 1fr minmax(50%, 1fr);
+  grid-template-columns: repeat(6, 1fr);
   justify-content: center;
   flex-direction: row;
   align-items: center;
@@ -172,12 +174,13 @@ $max-content-width: 1920px;
   max-width: $max-content-width;
   $flicker-color: red;
   user-select: none; /* Standard */
+  min-height: 50%;
 
   h2 {
     font-family: "Dot Digital-7";
     align-self: start;
     justify-self: start;
-    grid-column: 1 / 2;
+    grid-column: 1 / 3;
     grid-row: 1 / 2;
     font-size: 3em;
     z-index: 1;
@@ -187,32 +190,50 @@ $max-content-width: 1920px;
     -webkit-box-reflect: below -0.2em linear-gradient(transparent, rgba(0, 0, 0, 0.153));
     // animation: flicker 1.5s infinite alternate;
   }
-  .showcase__img {
-    grid-column: 1 / 3;
+  .showcase__img__shadow {
+    content: '';
+    position: absolute;
+    grid-column: 1 / 5;
     grid-row: 1 / 2;
     width: 90%;
+    max-width: 800px;
+    width: 100%;
+    left: 0;
+    height: 1em;
+    bottom: -3em;
+    z-index: 100000;
+    border-radius: 100%;
+    background-color: transparent;
+    animation: floatShadow 6s ease-in-out infinite;
+  }
+  .showcase__img {
+    grid-column: 1 / 5;
+    grid-row: 1 / 2;
+    width: 90%;
+    max-width: 800px;
     height: auto;
     max-height: fit-content;
     align-self: center;
     user-select: none; /* Standard */
     animation: float 6s ease-in-out infinite;
+    position: absolute;
     
-    &::after {
-      content: '';
-      position: absolute;
-      width: 100%;
-      left: 0;
-      height: 1em;
-      bottom: -3em;
-      z-index: 100000;
-      border-radius: 100%;
-      background-color: transparent;
-      animation: floatShadow 6s ease-in-out infinite;
-    }
+    // &::after {
+    //   content: '';
+    //   position: absolute;
+    //   width: 100%;
+    //   left: 0;
+    //   height: 1em;
+    //   bottom: -3em;
+    //   z-index: 100000;
+    //   border-radius: 100%;
+    //   background-color: transparent;
+    //   animation: floatShadow 6s ease-in-out infinite;
+    // }
 
     img {
       position: relative;
-      transform: rotate(-45deg);
+      transform: translateY(15%) rotate(-45deg);
     }
   }
   // .img {
@@ -224,7 +245,7 @@ $max-content-width: 1920px;
   //   transform: rotate(-45deg);
   // }
   .info {
-    grid-column: 3 / 4;
+    grid-column: 4 / 7;
     grid-row: 1 / 2;
     align-self: end;
     justify-self: center;
@@ -258,15 +279,12 @@ $max-content-width: 1920px;
 
 @keyframes floatShadow {
 	0% {
-    transform: translatey(0px);
 		box-shadow: 0px 2em 15px 0px rgba($black-color, 0.6);
 	}
 	50% {
-    transform: translatey(20px);
 		box-shadow: 0px 2em 35px 0px rgba($black-color, 0.2);
 	}
 	100% {
-    transform: translatey(0px);
 		box-shadow: 0px 2em 15px 0px rgba($black-color, 0.6);
 	}
 }
@@ -372,9 +390,13 @@ $max-content-width: 1920px;
       grid-column: inherit;
       grid-row: inherit;
     }
+    .showcase__img__shadow {
+      display: none;
+    }
     .showcase__img {
       grid-column: inherit;
       grid-row: inherit;
+      opacity: 0.3;
 
       &::after {
         animation: inherit;
@@ -385,39 +407,6 @@ $max-content-width: 1920px;
       grid-column: inherit;
       grid-row: inherit;
     }
-  }
-}
-
-.ashowcase {
-  display: grid;
-  grid-template-columns:
-    1fr minmax(5rem, 1fr) minmax(5rem, 2fr) minmax(5rem, 1fr)
-    1fr;
-  grid-template-rows: 10vh 1fr 1fr 1fr 10vh;
-  padding-top: 25vh;
-
-  h2 {
-    grid-column: 2 / 3;
-    align-self: flex-end;
-    font-family: "Dot Digital-7";
-    font-size: 10em;
-    justify-self: end;
-  }
-
-  img {
-    grid-row: 1 / 4;
-    grid-column: 3 / 4;
-    transform: rotate(-45deg);
-    position: relative;
-    $shadow-intensity: 0.5;
-    object-fit: cover;
-    align-self: center;
-    justify-self: center;
-  }
-
-  .info {
-    grid-row: 3 / 4;
-    grid-column: 4 / 5;
   }
 }
 
